3apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sender
  labels:
    app: sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sender
  template:
    metadata:
      labels:
        app: sender
    spec:
      containers:
      - name: sender
        image: bsexercisecontainerregistry.azurecr.io/sender
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8007
---
apiVersion: v1
kind: Service
metadata:
  name: sender
spec:
  selector: 
    app: sender
  type: ClusterIP
  ports:
  - port: 8007
    targetPort: 8007
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: receiver
  labels:
    app: receiver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: receiver
  template:
    metadata:
      labels:
        app: receiver
    spec:
      containers:
      - name: receiver
        image: bsexercisecontainerregistry.azurecr.io/receiver
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: receiver
spec:
  selector: 
    app: receiver
  type: ClusterIP
  ports:
  - port: 8008
    targetPort: 8008
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: askred
  labels:
    app: askred
spec:
  replicas: 1
  selector:
    matchLabels:
      app: askred
  template:
    metadata:
      labels:
        app: askred
    spec:
      containers:
      - name: askred
        image: bsexercisecontainerregistry.azurecr.io/askred
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8009
---
apiVersion: v1
kind: Service
metadata:
  name: askred
spec:
  selector: 
    app: askred
  type: ClusterIP
  ports:
  - port: 8009
    targetPort: 8009
