ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bsexercise.info
    http:
      paths:
      - pathType: Prefix
        path: "/send/add"
        backend:
          service:
            name: sender
            port: 
              number: 80
      - pathType: Prefix
        path: "/send/size"
        backend:
          service:
            name: askred
            port: 
              number: 80
